<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Scrabble Score Keeper</string>
    <string name="TeamAName">Player A</string>
    <string name="TeamBName">Player B</string>
    <string name="reset">Reset</string>
    <string name="add_points">Add Points</string>
    <string name="bingo">Bingo!</string>
    <string name="pass">Pass!</string>
    <string name="end_game">+/- Un-played Tiles</string>
    <string name="player_a_name">Player A Name</string>
    <string name="player_b_name">Player B Name</string>
    <string name="start_game">Start Game</string>
    <string name="start_game_instructions">Draw from the pouch for first play. The player with the letter closest to \'A\' plays first. A blank tile beats any letter. Player A plays first, Player B second.</string>
    <string name="player_a_points">Player A Points</string>
    <string name="player_a_bingos">Player A Bingos</string>
    <string name="player_b_points">Player B Points</string>
    <string name="player_b_bingos">Player B Bingos</string>
    <string name="bingo_message">A premium of 50 points was added to your score. Now add the score of your turn.</string>
    <string name="turn_message">Please wait for your turn.</string>
    <string name="enter_number_message">Please enter a number!</string>
    <string name="start_game_message">Please enter your names to start the game!</string>
    <string name="end_game_message">Please enter the sum of your un-played tiles, proceeded by minus!</string>
    <string name="winner"><xliff:g example="Katerina" id="playerName">%s</xliff:g> won!</string>
</resources>
