<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scrabble_app_background"
    android:fillViewport="true"
    android:paddingBottom="@dimen/root_layout_padding_bottom"
    android:paddingTop="@dimen/root_layout_padding_top"
    tools:context="co.elisavet.scorekeeper.StartGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/teamsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game_instructions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/teamsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TeamAName" />

            <EditText
                android:id="@+id/player_a_name"
                style="@style/addScoreStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_a_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/teamsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TeamBName" />

            <EditText
                android:id="@+id/player_b_name"
                style="@style/addScoreStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_b_name" />
        </LinearLayout>

        <Button
            style="@style/buttonsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startGame"
            android:text="@string/start_game" />

    </LinearLayout>

</ScrollView>